fix: move runtime field

--- a/platforms-serverless/firebase-functions/firebase.json
+++ b/platforms-serverless/firebase-functions/firebase.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "codebase": "firebase-functions"
-  },
-  "runtime": "nodejs22"
+    "codebase": "firebase-functions",
+    "runtime": "nodejs22"
+  }
 }
