--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typescript": "5.8.2"
   },
   "engines": {
-    "pnpm": "8"
+    "node": ">=18.18",
+    "pnpm": ">=9.14.4 <10"
   },
   "scripts": {
     "fetch-retry": "pnpm exec ts-node utils/fetch-retry-and-confirm-version.ts",
