chore(ci): fix "packageManager" property in package.json

--- a/platforms-serverless/netlify-github/package.json
+++ b/platforms-serverless/netlify-github/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "packageManager": "pnpm@8.15.9",
+  "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
   "devDependencies": {
     "@types/node": "18.19.79",
     "prisma": "6.5.0-dev.50",
