fix: enable nodejs compat in cf

--- a/driver-adapters-wasm/d1-cf-basic/wrangler.base.toml
+++ b/driver-adapters-wasm/d1-cf-basic/wrangler.base.toml
@@ -1,6 +1,7 @@
 name = "d1-cf-basic"
 main = "src/index.js"
 compatibility_date = "2023-10-30"
+compatibility_flags = [ "nodejs_compat" ]
 
 [[d1_databases]]
 binding = "MY_DATABASE"    # i.e. available in the Worker on env.MY_DATABASE
