--- a/platforms-serverless-vercel/vercel-cli/package.json
+++ b/platforms-serverless-vercel/vercel-cli/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "start": "node index.js",
     "postinstall": "prisma generate"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
