--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -859,6 +859,8 @@ jobs:
         clientEngine: ['library', 'binary']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
+    env:
+      SKIP_YARN_COREPACK_CHECK: 1
 
     steps:
       - uses: actions/checkout@v4
