fix: specify node version for accelerate vercel

--- a/accelerate/vercel-cli-serverless-functions/package.json
+++ b/accelerate/vercel-cli-serverless-functions/package.json
@@ -25,5 +25,8 @@
   "scripts": {
     "test": "jest",
     "postinstall": "prisma generate --data-proxy"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
