--- a/platforms-serverless/netlify-github-with-nextjs-caching/package.json
+++ b/platforms-serverless/netlify-github-with-nextjs-caching/package.json
@@ -19,5 +19,11 @@
     "node-fetch": "2.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "prisma",
+      "@prisma/client"
+    ]
   }
 }
